force-app/force-app/main/default/objects/Branding_Setting__c/Branding_Setting__c.object-meta.xml
<CustomObject>
    <label>Branding Setting</label>
    <nameField>
        <label>Branding Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branding Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>