force-app/force-app/main/default/objects/Branding_Setting__c/fields/Custom_CSS_URL__c.field-meta.xml
<CustomField>
    <fullName>Custom_CSS_URL__c</fullName>
    <inlineHelpText>A link to a custom CSS file for your Store.</inlineHelpText>
    <label>Custom CSS URL</label>
    <type>Url</type>
</CustomField>