force-app/force-app/main/default/objects/Branding_Setting__c/fields/Custom_Label_2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Label_2__c</fullName>
    <inlineHelpText>Label for &quot;Custom URL 2&quot;. Displayed in the Store&apos;s footer.</inlineHelpText>
    <label>Custom Label 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>