force-app/force-app/main/default/objects/Branding_Setting__c/fields/Custom_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Custom_URL_2__c</fullName>
    <inlineHelpText>Custom URL to be displayed in your Store&apos;s footer. Can be a link to your website, GDPR notification, etc.</inlineHelpText>
    <label>Custom URL 2</label>
    <type>Url</type>
</CustomField>