force-app/force-app/main/default/objects/Branding_Setting__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
                <default>true</default>
                <label>Light</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>